--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 * {
   font-family: "Outfit", sans-serif;
 }
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ** Custom CSS 👇 */
+
+.glass {
+  background: rgba(255, 255, 255, 0.24);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5.3px);
+  -webkit-backdrop-filter: blur(5.3px);
+  border: 1px solid rgba(255, 255, 255, 1);
+}
